<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    tools:context=".Registration1"
    android:layout_marginEnd="@dimen/layout_marginEnd"
    android:layout_marginStart="@dimen/layout_marginStart"
    android:layout_marginBottom="@dimen/layout_marginBottom"
    android:layout_marginTop="@dimen/layout_marginTop"
    >


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/fNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fNameTIL">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/lNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android.support.design:counterEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lNameTIL">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNum" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/eMailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneTIL">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/eMailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eMail" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:text="@string/continueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

</android.support.constraint.ConstraintLayout>