<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationActivity"
    android:layout_marginEnd="@dimen/layout_marginEnd"
    android:layout_marginStart="@dimen/layout_marginStart"
    android:layout_marginBottom="@dimen/layout_marginBottom"
    android:layout_marginTop="@dimen/layout_marginTop"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fNameTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineAddButton"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/addName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guidelineAddButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lNameTIL"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fNameTIL">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/lNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/midNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lNameTIL"
        app:layout_constraintBottom_toTopOf="@id/prefixTIL">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/midNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middletName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/prefixTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/midNameTIL"
        app:layout_constraintBottom_toTopOf="@id/suffixTIL">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/prefixET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Prefix" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/suffixTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prefixTIL"
        app:layout_constraintBottom_toTopOf="@id/phoneRecycleView">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/suffixET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Suffix" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/phoneRecycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintEnd_toStartOf="@id/guidelinePhoneTypes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/suffixTIL"
        app:layout_constraintBottom_toTopOf="@id/eMailTIL"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/eMailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneRecycleView">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/eMailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eMail" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:text="@string/continueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

</android.support.constraint.ConstraintLayout>